# libacorn

./: CMakeLists.txt  README.md
src/libacorn/: CMakeLists.txt
src/libacorn/util/: memory_util.cpp  memory_util.hpp
tests/: CMakeLists.txt  main.cpp
tests/util/: memory_util.cpp
